--- a/projects/hono-react/src/main.css
+++ b/projects/hono-react/src/main.css
@@ -19,3 +19,22 @@
     border-color: var(--color-gray-200, currentColor);
   }
 }
+
+/*
+  react-markdown customs
+*/
+
+/* インラインコードブロックのスタイル */
+.prose p code {
+  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-1;
+}
+
+/* インラインコードブロックの before スタイルを無効にする */
+:where(.prose p code):not(:where([class~="not-prose"],[class~="not-prose"] *))::before {
+  content: none;
+}
+
+/* インラインコードブロックの after スタイルを無効にする */
+:where(.prose p code):not(:where([class~="not-prose"],[class~="not-prose"] *))::after {
+  content: none;
+}
