--- a/projects/portfolio/src/client/main.css
+++ b/projects/portfolio/src/client/main.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
 
 @config '../../tailwind.config.ts';
 
@@ -38,6 +40,11 @@
   .h-calc {
     height: calc(100vh - var(--height));
   }
+}
+
+body {
+  /* font-family: "Noto Sans JP", sans-serif; */
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 /*
