--- a/packages/chatbot-ui/src/client/styles.css
+++ b/packages/chatbot-ui/src/client/styles.css
@@ -118,3 +118,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+.chat-scrollbar-custom::-webkit-scrollbar {
+  width: 6px; /* スクロールバーの幅 */
+}
+
+.chat-scrollbar-custom::-webkit-scrollbar-track {
+  background: transparent; /* スクロールバーの背景色を変更 */
+}
+
+.chat-scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: #c0c0c0; /* スクロールバーのつまみ部分の色 */
+  border-radius: 4px;
+  border: none;
+}
