--- a/packages/chatbot-ui/src/client/styles.css
+++ b/packages/chatbot-ui/src/client/styles.css
@@ -119,15 +119,16 @@
   }
 }
 
-.chat-scrollbar-custom::-webkit-scrollbar {
-  width: 6px; /* スクロールバーの幅 */
+::-webkit-scrollbar {
+  width: 6px; /* 縦スクロールバーの幅 */
+  height: 6px; /* 横スクロールバーの高さ */
 }
 
-.chat-scrollbar-custom::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: transparent; /* スクロールバーの背景色を変更 */
 }
 
-.chat-scrollbar-custom::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: #c0c0c0; /* スクロールバーのつまみ部分の色 */
   border-radius: 4px;
   border: none;
