--- a/projects/portfolio/src/client/main.css
+++ b/projects/portfolio/src/client/main.css
@@ -60,20 +60,44 @@ body {
   react-markdown customs
 */
 
+.prose > p {
+  line-height: 1.5em;
+  margin-top: 1.0em;
+  margin-bottom: 1.0em;
+}
+
+.prose > blockquote > p {
+  white-space: pre-wrap;
+}
+
+/* ブロッククォートの before スタイルを無効にする */
+:where(.prose > blockquote > p):not(
+    :where([class~="not-prose"], [class~="not-prose"] *)
+  )::before {
+  content: none;
+}
+
+/* ブロッククォートの after スタイルを無効にする */
+:where(.prose > blockquote > p):not(
+    :where([class~="not-prose"], [class~="not-prose"] *)
+  )::after {
+  content: none;
+}
+
 /* インラインコードブロックのスタイル */
-.prose p code {
+.prose > p > code {
   @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-1;
 }
 
 /* インラインコードブロックの before スタイルを無効にする */
-:where(.prose p code):not(
+:where(.prose > p > code):not(
     :where([class~="not-prose"], [class~="not-prose"] *)
   )::before {
   content: none;
 }
 
 /* インラインコードブロックの after スタイルを無効にする */
-:where(.prose p code):not(
+:where(.prose > p > code):not(
     :where([class~="not-prose"], [class~="not-prose"] *)
   )::after {
   content: none;
