--- a/projects/portfolio/src/client/main.css
+++ b/projects/portfolio/src/client/main.css
@@ -86,7 +86,7 @@ body {
 
 /* インラインコードブロックのスタイル */
 .prose > p > code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-1;
+  @apply font-mono text-sm inline bg-gray-200 text-gray-800 rounded px-1 py-1 dark:bg-gray-700 dark:text-gray-200;
 }
 
 /* インラインコードブロックの before スタイルを無効にする */
